--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
-    "appwrite": "^14.0.0",
+    "@tanstack/react-query": "^5.28.9",
+    "appwrite": "^13.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.363.0",
