--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.2",
+    "react-intersection-observer": "^9.8.2",
     "react-router-dom": "^6.22.3",
     "tailwind-merge": "^2.2.2",
     "zod": "^3.22.4"
