--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "eslint-plugin-tailwindcss": "^3.15.1",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
